manifests/nginx/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: fleet-test
  labels:
    app: csg-ime
    env: test
