manifests/nginx/pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: fleet-test
  namespace: fleet-test
  labels:
    app: nginx
    role: web
spec:
  containers:
  - name: fleet-test
    image: docker.io/library/nginx:latest
    imagePullPolicy: IfNotPresent
    ports:
    - name: web
      containerPort: 80
      protocol: TCP
