manifests/nginx/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: fleet-test
  labels:
    app: nginx
    role: web
spec:
  selector:
    app: nginx
    role: web
  ports:
  - name: web
    port: 8999
    protocol: TCP
    targetPort: web
  type: ClusterIP
