manifests/nginx/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
  name: web-ingress
  namespace: fleet-test
spec:
  rules:
  - host: web.example.com
    http:
      paths:
      - backend:
          service:
            name: web
            port:
              number: 8999
        path: /
        pathType: Prefix
